# OpenGL_Projects

Applications-build/compute examples-vsbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  compute.sln  compute.vcxproj  compute.vcxproj.filters
Applications-build/compute examples-vsbuild/Debug/: compute.ilk
Applications-build/compute examples-vsbuild/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
Applications-build/compute examples-vsbuild/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Applications-build/compute examples-vsbuild/compute.dir/Debug/compute.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  compute.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Applications-build/model_loader-vsbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  model_loader.sln  model_loader.vcxproj  model_loader.vcxproj.filters
Applications-build/model_loader-vsbuild/Debug/: model_loader.ilk
Applications-build/model_loader-vsbuild/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
Applications-build/model_loader-vsbuild/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Applications-build/model_loader-vsbuild/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.write.1.tlog
Applications-build/model_loader-vsbuild/model_loader.dir/Debug/model_loader.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  model_loader.lastbuildstate
Applications-build/model_loader-vsbuild/model_loader.dir/Release/model_loader.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  model_loader.lastbuildstate
Applications-source/compute examples/: CMakeLists.txt
Applications-source/compute examples/shaders/: comp_ex01.comp  render_image.frag
Applications-source/compute examples/src/: compute.cpp  compute.hpp
Applications-source/model_loader/: CMakeLists.txt
Applications-source/model_loader/shaders/: backface.frag  fragment.frag  fragment2.frag  frontface.vert  leaf_store.comp  no_shading.frag  node_alloc.comp  node_flag.comp  node_init.comp  ray_marching.frag  ray_marching.vert  render_svo.frag  render_svo.geom  render_svo.vert  render_voxel.frag  slice_visualization.frag  slice_visualization.vert  vertex.vert  vertex2.vert  voxelization.frag  voxelization.geom  voxelization.vert  voxelize.frag  voxelize.geom  voxelize.vert
Applications-source/model_loader/src/: model_loader.cpp
Applications-source/ray tracer/: CMakeLists.txt
Applications-source/ray tracer/shaders/: ray_tracer.frag  ray_tracer.vert
Applications-source/ray tracer/src/: ray_tracer.cpp  ray_tracer.hpp
Applications-source/test/: CMakeLists.txt
Applications-source/test/shaders/: fragment_shader.frag  vertex_shader.vert
Applications-source/test/src/: test.cpp  test.hpp
Libraries-build/cgm-vsbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cgm.sln  cgm.vcxproj  cgm.vcxproj.filters  cmake_install.cmake
Libraries-build/cgm-vsbuild/Debug/: cgm.lib
Libraries-build/cgm-vsbuild/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
Libraries-build/cgm-vsbuild/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Libraries-build/cgm-vsbuild/cgm.dir/Debug/cgm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cgm.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
Libraries-build/cgs-vsbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cgs.sln  cgs.vcxproj  cgs.vcxproj.filters  cmake_install.cmake
Libraries-build/cgs-vsbuild/Debug/: cgs.lib
Libraries-build/cgs-vsbuild/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
Libraries-build/cgs-vsbuild/cgs.dir/Debug/cgs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cgs.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
Libraries-build/gls-vsbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  gls.sln  gls.vcxproj  gls.vcxproj.filters
Libraries-build/gls-vsbuild/Debug/: gls.lib
Libraries-build/gls-vsbuild/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
Libraries-build/gls-vsbuild/gls.dir/Debug/gls.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
Libraries-source/Simple OpenGL Image Library/projects/VC9/: UpgradeLog.htm
Libraries-source/Simple OpenGL Image Library/projects/VC9/Debug/: SOIL.idb  SOIL.lib
Libraries-source/cgm/: CMakeLists.txt
Libraries-source/cgm/src/: mat4.cpp  mat4.hpp  matrix_transform.cpp  matrix_transform.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vector_operations.cpp  vector_operations.hpp
Libraries-source/cgs/: CMakeLists.txt
Libraries-source/cgs/src/: Camera.cpp  Camera.hpp  Euler.cpp  Euler.hpp  Transform.cpp  Transform.hpp
Libraries-source/gls/: CMakeLists.txt
Libraries-source/gls/src/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex1P1N1UV.hpp
(+17 files in other folders)
