CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

PROJECT(model_loader)

FIND_PACKAGE(glfw3 3.2 REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

#GLEW
FIND_LIBRARY(GLEW_LIBRARY glew32s)
FIND_PATH(GLEW_INCLUDE_DIR glew.h)

#GLFW
FIND_LIBRARY(GLFW_LIBRARY glfw3)
FIND_PATH(GLFW_INCLUDE_DIR glfw3.h)

FIND_LIBRARY(CGM_LIBRARY   cgm)
FIND_PATH(CGM_INCLUDE_DIR  vec3.hpp)

FIND_LIBRARY(CGS_LIBRARY   cgs)
FIND_PATH(CGS_INCLUDE_DIR  Transform.hpp)

FIND_LIBRARY(GLS_LIBRARY gls)
FIND_PATH(GLS_INCLUDE_DIR Shader.hpp)

FIND_LIBRARY(SOIL_LIBRARY SOIL)
FIND_PATH(SOIL_INCLUDE_DIR SOIL.h)

FIND_PATH(ASSIMP_INCLUDE_DIR importer.hpp)
FIND_LIBRARY(ASSIMP_LIBRARY  assimp-vc140-mt)



INCLUDE_DIRECTORIES(src ${CGM_INCLUDE_DIR} ${CGS_INCLUDE_DIR} ${GLS_INCLUDE_DIR} ${SOIL_INCLUDE_DIR} ${ASSIMP_INCLUDE_DIR} ${GLFW_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})

#LINK_DIRECTORIES(C:/glew-2.0.0/lib/Release/Win32 C:/glfw/lib)


#SET(INCLUDE_FILES src/model_loader.hpp)
SET(SOURCE_FILES  src/model_loader.cpp)

ADD_EXECUTABLE(model_loader  ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(model_loader ${GLFW_LIBRARY} ${OPENGL_gl_LIBRARY} ${GLEW_LIBRARY} ${CGM_LIBRARY} ${CGS_LIBRARY} ${GLS_LIBRARY} ${ASSIMP_LIBRARY} ${SOIL_LIBRARY})


