CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

PROJECT(Test)

FIND_PACKAGE(glfw3 3.2 REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

FIND_LIBRARY(CGM_LIBRARY   cgm)
FIND_PATH(CGM_INCLUDE_DIR  vec3.hpp)

FIND_LIBRARY(CGS_LIBRARY   cgs)
FIND_PATH(CGS_INCLUDE_DIR  Transform.hpp)

FIND_LIBRARY(GLAUX_LIBRARY glaux)
FIND_PATH(GLAUX_INCLUDE_DIR Shader.hpp)

FIND_LIBRARY(SOIL_LIBRARY SOIL)
FIND_PATH(SOIL_INCLUDE_DIR SOIL.h)

SET(my_libs_dir C:/Users/mateu/Documents/Projects/Libraries )

INCLUDE_DIRECTORIES(src ${CGM_INCLUDE_DIR} ${CGS_INCLUDE_DIR} ${GLAUX_INCLUDE_DIR} ${SOIL_INCLUDE_DIR} C:/glfw/include  C:/glew-2.0.0/include ${OPENGL_INCLUDE_DIR})

LINK_DIRECTORIES(C:/glew-2.0.0/lib/Release/Win32 C:/glfw/lib)


SET(INCLUDE_FILES src/test.hpp)
SET(SOURCE_FILES  src/test.cpp)

ADD_EXECUTABLE(Test ${INCLUDE_FILES} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(Test glfw3 ${OPENGL_gl_LIBRARY} glew32s  ${CGM_LIBRARY} ${CGS_LIBRARY} ${GLAUX_LIBRARY} ${SOIL_LIBRARY})


